# Shadowheart

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  main.cc
.github/workflows/: main.yml
include/: Shadowheart.hh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
modules/math/: CMakeLists.txt
modules/math/include/: m_mat.hh  m_vec.hh
modules/math/src/: m_mat.cc  m_vec.cc
modules/renderer/: CMakeLists.txt
modules/renderer/include/: r_shader.hh
modules/renderer/src/: r_shader.cc
src/: Shadowheart.cc
